@@ -150,6 +150,7 @@ NEW:
 		Added HitAnimPalette trait for LaserZap projectiles. Laser hit animations can now specify individual palettes. Defaults to effect palette.
 		Added RenderNameTag trait to show the player's name above an actor.
 		Added ExplosionPalette and WaterExplosionPalette traits to Warheads to allow custom explosion palettes. Defaults to effect palette.
+		Bullet, Missile and GravityBomb projectiles can now define a custom palette (see RA Torpedo weapon for reference).
 		Fixed performance issues with units pathing to naval transports.
 		Fixed unit moving to transports that have moved.
 		Updated shroud-based traits to use world units.
